add contact page

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
     "@react-three/fiber": "^8.16.6",
     "@tabler/icons-react": "^3.5.0",
     "@tsparticles/engine": "^3.4.0",
